--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.5",
+    "expo": "^54.0.12",
     "react": "18.2.0",
     "react-native": "^0.73.11",
     "react-native-gesture-handler": "^2.14.1",
