Replace hardcoded API keys with environment variables for both apps

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,8 @@
-# OpenAI API Configuration
-# Kopiere diese Datei zu .env und trage deinen API-Key ein
+# React Native App - API Keys
+# Kopiere diese Datei zu .env und trage deine API-Keys ein
 
+# OpenAI API Key für Chat-Funktionalität (erforderlich)
 OPENAI_API_KEY=your-openai-api-key-here
+
+# ElevenLabs API Key für Text-to-Speech (optional)
+ELEVENLABS_API_KEY=your-elevenlabs-api-key-here
